tests/additional/fail/for_var.mvm
double i;
string s;

for (i in 1..2) {}
for (s in 1..2) {}
